# apex-aiops

./: .env.example  .gitignore  LICENSE  README.md  daemon.py  implementation_plan.md  pyproject.toml  requirements.txt  setup_test_db.py  trigger_another.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/incidents/: page.tsx
dashboard/src/app/metrics/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/app/test/: page.tsx
dashboard/src/components/: IncidentCard.tsx  IncidentTimeline.tsx  MetricsChart.tsx  QueryDiff.tsx  Sidebar.tsx  StatusBadge.tsx
dashboard/src/lib/: types.ts
scripts/: download_datasets.py  seed_supabase.py  setup_supabase_schema.py
src/: __init__.py
src/mcp/: __init__.py  server.py  tools.py
src/models/: __init__.py  active_learning.py  bilstm.py  dataset.py  inference.py  train.py
src/observability/: __init__.py  tracer.py
src/orchestration/: __init__.py  graph.py  nodes.py  router.py  state.py
src/reasoning/: __init__.py  cloud_agent.py  ollama_agent.py  prompts.py  sql_optimizer.py
src/telemetry/: __init__.py  collector.py  preprocessor.py
src/validation/: __init__.py  schemas.py  validator_agent.py
tests/: conftest.py  test_bilstm.py  test_graph.py  test_mcp.py  test_schemas.py
